Fix search results bug
Still NOT responsive.

--- a/docs/sass/my-styles.scss
+++ b/docs/sass/my-styles.scss
@@ -90,12 +90,13 @@ $search-width: 80vw;
         z-index: 2;
         padding: 4px 2vw;
         margin: 0px 28px 0 0;
-        font-size: 4rem;
+        font-size: 2rem;
         color: $secondary-blue; //#337ab7;
         width: 100vw;
         background: white;
         border-bottom: 1px solid $neutral-light-grey;
         width: $search-width;
+        height: 3.3rem;
     }
     button {
         width: 40px;
@@ -108,17 +109,17 @@ $search-width: 80vw;
         color: black;
         z-index: 2;
         margin: 10px 10px 0 0;
-        font-size: 4rem;
+        font-size: 2.2rem;
         line-height: 0;
         font-weight: bold;
     }
 }
 #mkdocs-search-results {
-    height: 80vh;
+    height: 73vh;
     margin: 10vh 10vw 0;
-    overflow-y: auto; //scroll;
+    overflow-y: auto;
     position: relative;
-    padding: 0; //65px 0 0;
+    padding: 2vh 0 0;
     background-color: white;
     min-width: $search-width;
     &:before {
@@ -132,7 +133,7 @@ $search-width: 80vw;
     }
     > p {
         margin: 4vh 0;
-        font-size: 2rem;
+        font-size: 1rem;
         color: $secondary-blue; //#337ab7;
         font-weight: 500;
     }
